<resources>
    <string name="app_name">auth</string>
    <string name="sign_in_hint_text">please enter your\ndetails to sign in</string>
    <string name="hello_text">Hello!</string>
    <string name="sign_up_text">Sign up</string>
    <string name="dont_have_account_text">Don\'t have an account?</string>
    <string name="forgot_pin_text">forgot your pin?</string>
    <string name="sign_in_text">Sign in</string>
    <string name="password_text">Password</string>
    <string name="email_string">Email</string>
    <string name="register_text">Register</string>
    <string name="already_have_account_text">Already have an account?</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="agree_terms_conditions_text">I agree to the terms &amp; conditions</string>
    <string name="successfully_registered_string">You have successfully registered\nyour account. You can now sign in</string>
    <string name="intro_text">Connect with your business partners\nand associates using the new platform</string>
    <string name="skip_introduction_text">Skip Introduction</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
